# unknown-backend

./: .dockerignore  .env.k8s.dev  .env.k8s.prod  .env.local.dev  .env.local.prod  Dockerfile  Makefile  gunicorn.conf.py  install.py  main.py  pyproject.toml  pytest.ini  requirements.txt
directories/: __init__.py
helms/unknown-backend/: Chart.yaml  values.prod.yaml
helms/unknown-backend/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helms/unknown-backend/templates/tests/: test-connection.yaml
tests/: conftest.py
tests/apis/: test_examples.py
unknown_backend/: __init__.py
unknown_backend/annotations/: __init__.py  deprecated.py
unknown_backend/apis/: __init__.py
unknown_backend/apis/v1/: __init__.py  index.py
unknown_backend/apps/: __init__.py
unknown_backend/apps/v1/: __init__.py
unknown_backend/apps/v2/: __init__.py
unknown_backend/assemble/: event.py  exception.py  middleware.py
unknown_backend/configs/: __init__.py
unknown_backend/database/: __init__.py  contexts.py  master+slave.py
unknown_backend/models/: __init__.py
unknown_backend/schemas/: __init__.py
unknown_backend/services/: account_service.py
